gccida/g1/record_one_set
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1694:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 **v5; // rax 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1694:13: error: use of undeclared identifier 'v5'
reg_set_0 **v5; // rax 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1698:31: error: expected expression
reg_set_table = ( reg_set_0 **)xrealloc( reg_set_table, ( unsigned int)( 8 * ( regno + 100))); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1698:19: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table = ( reg_set_0 **)xrealloc( reg_set_table, ( unsigned int)( 8 * ( regno + 100))); 
                  ^~~~~~~~~
                  reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1714:1: error: use of undeclared identifier 'v5'
v5 = &reg_set_table[regno]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1715:28: error: use of undeclared identifier 'v5'
*( _QWORD *)object_base = *v5; 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1716:20: error: expected expression
*v5 = ( reg_set_0 *)object_base; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1716:9: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
*v5 = ( reg_set_0 *)object_base; 
        ^~~~~~~~~
        reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/gcse.c:1716:2: error: use of undeclared identifier 'v5'
*v5 = ( reg_set_0 *)object_base; 
 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_set/src/obj/gcse.o] Error 1
